Fix bugs & finilize library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,18 +3,18 @@ cmake_minimum_required(VERSION 3.27)
 project(candyaudio)
 
 find_library(portaudio portaudio REQUIRED)
-find_library(raylib raylib REQUIRED)
+
+set(CA_LIBRARY_BUILD_TYPE STATIC)
 
 set(SOURCES 
-  src/main.cpp
-  src/AudioDevice.cpp
-  src/AudioSource.cpp
-  src/AudioData.cpp
+  CandyAudio/src/AudioDevice.cpp
+  CandyAudio/src/AudioSource.cpp
+  CandyAudio/src/AudioData.cpp
 )
-
-add_executable(${PROJECT_NAME} ${SOURCES})
+  
+add_library(${PROJECT_NAME} ${CA_LIBRARY_BUILD_TYPE} ${SOURCES})
 
 target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_SOURCE_DIR}/lib)
-target_include_directories(${PROJECT_NAME} BEFORE PUBLIC ${CMAKE_SOURCE_DIR}/src/include)
+target_include_directories(${PROJECT_NAME} BEFORE PUBLIC ${CMAKE_SOURCE_DIR}/CandyAudio/src/include)
 
-target_link_libraries(${PROJECT_NAME} PUBLIC ${portaudio} ${raylib})
+target_link_libraries(${PROJECT_NAME} PUBLIC ${portaudio})
