Fix some logical errors

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.27)
 
-project(candyaudio)
+project(CandyAudio)
 
 find_library(portaudio portaudio REQUIRED)
 
@@ -11,16 +11,10 @@ set(CA_SOURCES
   src/AudioSource.cpp
   src/AudioData.cpp
 )
-
-set(CA_INCLUDES
-  include/CandyAudio/AudioDevice.hpp
-  include/CandyAudio/AudioSource.hpp
-  include/CandyAudio/AudioData.hpp
-)
   
 add_library(${PROJECT_NAME} ${CA_LIBRARY_BUILD_TYPE} ${CA_SOURCES})
 
-target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_SOURCE_DIR}/lib)
+target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_SOURCE_DIR}/libs/)
 target_include_directories(${PROJECT_NAME} BEFORE PUBLIC ${CMAKE_SOURCE_DIR}/CandyAudio/include)
 
 target_link_libraries(${PROJECT_NAME} PUBLIC ${portaudio})
